// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploader component should render a file uploader for an image file 1`] = `
<div>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className={undefined}
      style={undefined}
    >
      Upload Button
    </span>
  </button>
  <div
    className="preview"
  >
    <img
      alt="preview"
      src="http://www.example.com/foobar.png"
    />
  </div>
  <input
    className="hidden"
    name="file-uploader"
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`FileUploader component should render a file uploader with the filename if the file is not an image 1`] = `
<div>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className={undefined}
      style={undefined}
    >
      Upload Button
    </span>
  </button>
  <div
    className="preview-title"
  >
    
  </div>
  <input
    className="hidden"
    name="file-uploader"
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`FileUploader component should render a file uploader without preview 1`] = `
<div>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className={undefined}
      style={undefined}
    >
      Upload Button
    </span>
  </button>
  <div
    className="preview-title"
  >
    
  </div>
  <input
    className="hidden"
    name="file-uploader"
    onChange={[Function]}
    type="file"
  />
</div>
`;
